2.0.5
---------

- Added support to install the cachefile that is created in the initramfs environment
  to your rootfs.
- Fixed a bug where the initramfs would only get bz2 compressed man pages.

2.0.4
---------

Major Changes:
- Added support to include your /etc/modprobe.d/zfs.conf file so that your zfs modules are
  loaded with your desired options.

Minor Changes:
- Useless "INIT" variable removed.

2.0.3
---------

Major Changes:
- Fixed bug where the initrd kept failing because it couldn't export (a non existing) pool.

2.0.2
---------

Major Changes:
- Relicensed back to MPLv2
- Removed ability to have zpool.cache inside the initramfs (Too many problems)

Minor Changes:
- UI changes were made. Spacing and some rewording

2.0.1
---------

Major Changes:
- Relicensed to the GPLv2 (Only the GPLv2, not v1, not v3, not v39232, only GPLv2)

Minor Changes:
- Made instructions more clearer in the USAGE file

2.0.0
---------

Major Changes:
- Completely rewrote the code so that it's cleaner and smaller
- Removed "Slax Bundle" creation option. This application will strictly be for creating
  an initramfs.

Minor Changes:
- Code is now using bash style if statements ([[ ]])

1.8.8
---------

Major Changes:
- Busybox 1.21.1 static binary now included.
- 'reboot -f' and 'poweroff -f' commands now work within the initramfs.
- The creator now runs depmod before gathering the modules. This prevents it from not being able
  to gather the modules if the modules were rebuilt but dependency information wasn't updated yet.

Minor Changes:
- MPLv2 License is now in the COPYING file
- Added LICENSES folder to include licenses for compliance (for busybox)
- Fixed a bug where grep was saying it didn't know about it's parameters.
- Removed 'nano' from the ebuild
- Fixed a bug where the program would try to build the initramfs if you tried to make it
  with a null assigned kernel (in the "Please enter a kernel" step).
- Cleaned up some code and added get_dlist() function