@@ -67,9 +67,6 @@ parse_cmdline()
 		recover)
 			recover="1" 
 			;;
-		instcache)
-			instcache="1"
-			;;
 		su)
 			su="1"
 			;;
@@ -187,6 +184,10 @@ zfs_trigger()
         eflag "Mounting ${pool_name}..."
         zpool import -f -N -o cachefile= ${pool_name} || die "Failed to import your pool: ${pool_name}"
         mount -t zfs -o zfsutil ${root} ${NEW_ROOT} || die "Failed to import your zfs root dataset"
+
+	# Installs the cache generated by this initramfs run to the rootfs. This prevents the main system from
+	# becoming out of sync with what the initramfs is working with.
+	install_cache
 }
 
 # Self explanatory
@@ -210,8 +211,6 @@ check_triggers()
 # Installs the zpool.cache generated by the initramfs to the rootfs
 install_cache()
 {
-        eflag "Installing zpool.cache to your rootfs..."
-	
         local CACHE="/etc/zfs/zpool.cache"
 
         # If there is an old cache in the rootfs, then delete it.
@@ -225,7 +224,7 @@ install_cache()
 # Single User Mode
 single_user()
 {
-        chroot ${NEW_ROOT} /bin/bash --login
+	exec setsid /bin/bash -c 'exec chroot ${NEW_ROOT} /bin/bash --login  </dev/tty1 >/dev/tty1 2>&1'
 }
 
 ### Utility Functions ###
@@ -233,31 +232,31 @@ single_user()
 # Used for displaying information
 einfo()
 {
-        eline && echo -e "\e[1;32m>>>\e[0;m ${@}"
+        eline && echo -e "\e[1;32m*\e[0;m ${@}"
 }
 
 # Used for input (questions)
 eqst()
 {
-        eline && echo -en "\e[1;37m>>>\e[0;m ${@}"
+        eline && echo -en "\e[1;37m*\e[0;m ${@}"
 }
 
 # Used for warnings
 ewarn()
 {
-        eline && echo -e "\e[1;33m>>>\e[0;m ${@}"
+        eline && echo -e "\e[1;33m*\e[0;m ${@}"
 }
 
 # Used for flags
 eflag()
 {
-        eline && echo -e "\e[1;34m>>>\e[0;m ${@}"
+        eline && echo -e "\e[1;34m*\e[0;m ${@}"
 }
 
 # Used for errors
 die()
 {
-        eline && echo -e "\e[1;31m>>>\e[0;m ${@}" && rescue_shell 
+        eline && echo -e "\e[1;31m*\e[0;m ${@}" && rescue_shell 
 }
 
 # Prints empty line
