@@ -1,8 +1,9 @@
 2.0.5
 ---------
 
-- Added support to install the cachefile that is created in the initramfs environment
-  to your rootfs.
+- The initramfs will now always copy it's zpool.cache to the rootfs. This prevents the rootfs
+  from becoming out of sync with the stuff that the initramfs was working with.
+
 - Fixed a bug where the initramfs would only get bz2 compressed man pages.
 
 2.0.4
